<resources>

    <!--All Strings are in alphabetical order within their respective headings.-->

    <string name="app_name">DjangoRestClient</string>

    <!--Menu titles-->
    <string name="action_send_request">Send Request</string>
    <string name="action_save_request">Save Request</string>
    <string name="action_clear_request">Clear Request</string>
    <string name="action_show_extra_info">Extra info</string>
    <string name="action_delete_all_requests">Delete all requests</string>
    <string name="action_search_requests">Search requests</string>

    <!--Navigation drawer menu items titles-->
    <string name="about">About</string>
    <string name="history">History</string>
    <string name="rest_requests">Rest Requests</string>
    <string name="saved_requests">Saved Requests</string>
    <string name="settings">Settings</string>

    <!--Request Screen Strings-->
    <string name="body">Body</string>
    <string name="custom_header_name_no_whitespaces">Header name cannot contain whitespaces.</string>
    <string name="header_deleted">Header deleted!</string>
    <string name="header_restored">Header restored!</string>
    <string name="headers">Headers</string>
    <string name="hint_input_url">http://djangorestclient.com</string>
    <string name="hint_request_body">Raw request body text goes here</string>
    <string name="request_saved">Request saved.</string>
    <string name="request_updated">Request updated.</string>
    <string name="sending">Sending…</string>
    <string name="update_request_dialog_title">Update saved request?</string>
    <string name="update_request_dialog_message">Would you like to update the existing saved request or create and save a new one?</string>
    <string name="update_request_dialog_create_new">Create New</string>
    <string name="update_request_dialog_update">Update</string>
    <string name="url">Url</string>
    <string name="url_default_text">https://</string>

    <!--Add Header dialog strings-->
    <string name="add_header">Add Header</string>
    <string name="auth_basic">Authorization (Basic)</string>
    <string name="custom">Custom</string>
    <string name="header_name">Header Name</string>
    <string name="header_value">Header Value</string>
    <string name="password">Password</string>
    <string name="type">Type</string>
    <string name="username">Username</string>
    <string name="username_pwd_append">%1$s:%2$s</string>
    <string name="value">Value</string>

    <!--Response Screen Strings-->
    <string name="fab_copy_empty">Nothing to copy.</string>
    <string name="fab_copy_success">Response body copied to clipboard.</string>
    <string name="request_url">Request URL</string>
    <string name="response_body_label">Response Body</string>
    <string name="response_code_label">Response Code\n</string>
    <string name="response_code_label_with_value">Response Code\n%d</string>
    <string name="response_headers">Response Headers</string>
    <string name="response_time_ms_label">Response Time(ms)\n</string>
    <string name="response_time_ms_label_with_value">Response Time(ms)\n%d</string>

    <!--About Screen strings-->
    <string name="copyright">Copyright © 2018 DT</string>
    <string name="django_rest_client">Django Rest Client</string>
    <string name="rate_me">Rate Me!</string>
    <string name="version">Version 2.0</string>

    <!--Preference strings-->
    <string name="key_timeout_connect_preference">timeout_connect_preference</string>
    <string name="key_timeout_read_preference">timeout_read_preference</string>
    <string name="key_timeout_write_preference">timeout_write_preference</string>
    <string name="summary_timeout_preferences">After %s seconds</string>
    <string name="value_not_set">No value set</string>
    <string name="invalid_timeout_value_error">Timeout values can only contain digits!</string>

    <!--Requests List Screen-->
    <string name="no_requests_history">No requests in history yet!</string>
    <string name="no_requests_saved">No saved requests yet!</string>
    <string name="header_count">Header count = %d</string>
    <string name="delete">Delete</string>
    <string name="delete_requests_dialog_title">Delete requests?</string>
    <string name="delete_requests_history">This will clear all requests from history.</string>
    <string name="delete_saved_requests">This will clear all saved requests.</string>
    <string name="request_body">Request body</string>
    <string name="request_headers">Request Headers</string>
    <string name="request_deleted">Request deleted!</string>
    <string name="request_type">Request type</string>
    <string name="search_request_url">Search request url…</string>

    <!-- Miscellaneous strings -->
    <string name="accept">Accept</string>
    <string name="input_fields_empty_msg">Input fields cannot be empty.</string>
    <string name="invalid_url_msg">Please enter a valid url starting with http:// or https://</string>
    <string name="space_separated_strings">%1$s %2$s</string>
    <string name="confirmation_dialog_title">Confirm Exit !</string>
    <string name="confirmation_dialog_message">Any Request input data will be discarded. \nAre you sure you want to exit ?</string>
    <string name="confirmation_dialog_no">no</string>
    <string name="confirmation_dialog_yes">yes</string>
    <string name="no_connection_msg">Internet connectivity not available.</string>
    <string name="undo">UNDO</string>
    <string name="no_results">No results!</string>

</resources>
