<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_header"
        android:textSize="25sp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:textColor="@color/colorPrimaryDark"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
            android:labelFor="@+id/spinner_header_types"
            android:text="@string/type" />

        <Spinner
            android:id="@+id/spinner_header_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_header_fields_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/tv_header_label_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et_header_value_1"
            style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
            android:text="@string/value" />

        <EditText
            android:id="@+id/et_header_value_1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_header_fields_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_header_label_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/et_header_value_2"
            style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
            android:text="@string/password" />

        <EditText
            android:id="@+id/et_header_value_2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textNoSuggestions"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="20dp">

        <Button
            android:id="@+id/cancel_button"
            android:text="@android:string/cancel"
            style="@style/DialogButtonStyle"/>

        <Button
            android:id="@+id/ok_button"
            android:text="@android:string/ok"
            style="@style/DialogButtonStyle"/>

    </LinearLayout>

</LinearLayout>