<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/bottom_sheet_margin"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/request_type"
            android:textColor="@color/colorPrimary"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/tv_request_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <TextView
            style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/request_url"
            android:textColor="@color/colorPrimary"/>

        <View style="@style/Divider"/>

        <TextView
            android:id="@+id/tv_request_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:id="@+id/request_headers_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/request_headers"
                android:textColor="@color/colorPrimary"/>

            <View style="@style/Divider"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/headers_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/request_body_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/ScreenLabelsStyle.AddHeaderDialogLabelsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/request_body"
                android:textColor="@color/colorPrimary"/>

            <View style="@style/Divider"/>

            <TextView
                android:id="@+id/tv_request_body"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>