<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tarun.djangorestclient.com.djangorestclient.fragment.ResponseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_response_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/response_code_label"/>

            <TextView
                android:id="@+id/tv_response_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/response_time_ms_label"/>

        </LinearLayout>

        <View style="@style/Divider"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:text="@string/response_body_label"
            android:textStyle="bold"/>

        <ScrollView
            android:id="@+id/scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:background="@drawable/rounded_border"
            android:fillViewport="true"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/tv_response_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"/>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_copy_response_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="20dp"
            android:src="@drawable/ic_content_copy_white"
            app:tint="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            app:borderWidth="0dp"
            app:fabSize="mini"/>

    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
